--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<module>admin-service</module>
 		<module>audit-service</module>
 		<module>gateway-service</module>
+		<module>common</module>
 	</modules>
 
 
