--- a/todo-server/pom.xml
+++ b/todo-server/pom.xml
@@ -89,6 +89,12 @@
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.3.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
